k8s/admin-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui
  namespace: eshops

spec:
  type: ClusterIP

  selector:
    app: admin-ui

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
